--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "development": "mix",
+        "build": "vite build",
+        "watch": "mix watch",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.3",
         "vite": "^5.0.0"
     }
 }
